--- a/templates/index.html
+++ b/templates/index.html
@@ -7,16 +7,16 @@
     <title>PORTOFOLIO</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-
+    
 </head>
 
 <body>
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg bg-light.bg-gradient">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="2.png" alt="" style="width: 80px;"></a>
+            <a class="navbar-brand" href="#"><img src="{{ url_for('static', filename='img/2.png') }}" style="width: 80px;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -48,7 +48,7 @@
     <div class="container" style="margin-top: 100px;">
         <div class="row">
             <div class="col-md-6">
-                <img src="1.png" alt="" class="img-fluid">
+                <img src="{{ url_for('static', filename='img/1.png') }}" class="img-fluid">
             </div>
             <div class="col-md-6">
                 <div class="jumbotron">
@@ -95,23 +95,7 @@
 
     <div class="container" style="margin-top: 100px;" id="por1">
         <h1 style="text-align: center;">PORTOFOLIO</h1>
-        <h5 style="margin-top: 20px;"><strong>Proyek Frontend Laravel: UNEFF 2023</strong></h5>
-        <p>Proyek ini adalah salah satu pencapaian saya dalam pengembangan frontend website. Dalam proyek ini, saya
-            bertanggung jawab atas desain tampilan, pembuatan komponen frontend, serta integrasi dengan backend
-            menggunakan Laravel. Tujuan utama proyek ini adalah untuk menciptakan pengalaman pengguna yang lebih baik
-            dan meningkatkan daya tarik visual dari UNEFF.</p>
-        <h5><strong>Tantangan yang Dihadapi</strong></h5>
-        <p>Saat bekerja pada proyek ini, saya dihadapkan pada beberapa tantangan, seperti memastikan keterampilan
-            komunikasi yang baik dengan tim backend dan desain untuk menyelaraskan tampilan website dengan
-            fungsionalitasnya. Saya juga fokus pada masalah kinerja dan memastikan kecepatan loading yang optimal untuk
-            pengalaman pengguna yang mulus.</p>
-        <h5>Penggunaan Teknologi dan Keterampilan Khusus</h5>
-        <p>Saya menggunakan Laravel sebagai kerangka kerja utama untuk mengembangkan frontend website ini. Proyek ini
-            memerlukan pemahaman yang kuat tentang HTML, CSS, JavaScript, dan Laravel.</p>
-        <h5>Pelajaran yang Dipelajari</h5>
-        <p>Melalui proyek ini, saya belajar tentang pentingnya kolaborasi tim dalam pengembangan web. Saya juga
-            meningkatkan keterampilan dalam mengembangkan antarmuka pengguna yang menarik dan responsif.</p>
-    </div>  
+        
 
     <!-- Contact -->
     <div style="margin-top: 100px;" id="con1">
